fix too small close btn area in contact box

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -75,7 +75,6 @@ header .wrapper {
   cursor: pointer;
   font-size: 14px;
   line-height: 0;
-  height: 1px;
   position: relative;
   right: -5em;
   bottom: -0.5em;
@@ -84,4 +83,5 @@ header .wrapper {
 .contact-link-box .icon:hover {
   color: $orange-deep;
 }
+
 
