--- a/css/main.css
+++ b/css/main.css
@@ -766,7 +766,6 @@ header .wrapper {
   cursor: pointer;
   font-size: 14px;
   line-height: 0;
-  height: 1px;
   position: relative;
   right: -5em;
   bottom: -0.5em; }
